Fixing overflow-x on html and body

--- a/src/styles/common/_global.scss
+++ b/src/styles/common/_global.scss
@@ -1,8 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Exo:wght@200;400&display=swap");
 
+html, body {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 body {
   font-family: "Exo", sans-serif;
-  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: $grafitti;
